all buttons work and place for sync feature added

--- a/draw/templates/draw/big.html
+++ b/draw/templates/draw/big.html
@@ -139,28 +139,34 @@
   <body>
     
 <header class="site-header sticky-top py-1">
-  <div class="maestroLine container d-flex flex-column flex-md-row justify-content-between">
-        Maestro: Hit it!!
-  </div>
+    <div class="row">
+        <div class="col maestroLine container d-flex flex-column flex-md-row justify-content-between">
+            Maestro: Hit it!!
+        </div>
+        <div class="col bg-dark container d-flex flex-column flex-md-row justify-content-between">
+            Some sync feature
+        </div>
+    </div>
+  
 </header>
 
 <main>
 
 <div class="half " style="display:flex">
-    <img class="musicSheetA" id="musicSheet1A" style="width:1200px" height="1350px" src="https://drive.google.com/uc?export=view&id=1Xr-UWVaiMWkFY6PLuwV-wQ6u_Q3Lmg69">
-    <img id="orchestraLayout1B" style="width:1200px" height="1350px" src="https://drive.google.com/uc?export=view&id=1JW3hFmy5foT7eVsXVdCSYY_1G5UFwlSO">
+    <img class="musicSheetA" id="musicSheet1A" style="width:1420px" height="1350px" src="https://drive.google.com/uc?export=view&id=1Xr-UWVaiMWkFY6PLuwV-wQ6u_Q3Lmg69">
+    <img id="orchestraLayout1B" style="width:1420px" height="1350px" src="https://drive.google.com/uc?export=view&id=1JW3hFmy5foT7eVsXVdCSYY_1G5UFwlSO">
 </div>
 <div class="half " style="display:flex">
-    <img class="musicSheetA" id="musicSheet2A" style="width:1200px" height="1350px" src="https://drive.google.com/uc?export=view&id=17BuSFDEi9pmwbqyrD-QCt2zoKBEwhEh5">
-    <img id="orchestraLayout2B" style="width:1200px" height="1350px" src="https://drive.google.com/uc?export=view&id=1JW3hFmy5foT7eVsXVdCSYY_1G5UFwlSO">
+    <img class="musicSheetA" id="musicSheet2A" style="width:1420px" height="1350px" src="https://drive.google.com/uc?export=view&id=17BuSFDEi9pmwbqyrD-QCt2zoKBEwhEh5">
+    <img id="orchestraLayout2B" style="width:1420px" height="1350px" src="https://drive.google.com/uc?export=view&id=1JW3hFmy5foT7eVsXVdCSYY_1G5UFwlSO">
 </div>
 <div class="half " style="display:flex">
-    <img class="musicSheetA" id="musicSheet3A" style="width:1200px" height="1350px" src="https://drive.google.com/uc?export=view&id=1YjZMBjj3giowRCBx-scdpLXhrzt75Y17">
-    <img id="orchestraLayout3B" style="width:1200px" height="1350px" src="https://drive.google.com/uc?export=view&id=1JW3hFmy5foT7eVsXVdCSYY_1G5UFwlSO">
+    <img class="musicSheetA" id="musicSheet3A" style="width:1420px" height="1350px" src="https://drive.google.com/uc?export=view&id=1YjZMBjj3giowRCBx-scdpLXhrzt75Y17">
+    <img id="orchestraLayout3B" style="width:1420px" height="1350px" src="https://drive.google.com/uc?export=view&id=1JW3hFmy5foT7eVsXVdCSYY_1G5UFwlSO">
 </div>
 <div class="half " style="display:flex">
-    <img class="musicSheetA" id="musicSheet4A" style="width:1200px" height="1350px" src="https://drive.google.com/uc?export=view&id=1MiMuSVoV5TlGnM0_LDLF26HOsnPl5xpC">
-    <img id="orchestraLayout4B" style="width:1200px" height="1350px" src="https://drive.google.com/uc?export=view&id=1JW3hFmy5foT7eVsXVdCSYY_1G5UFwlSO">
+    <img class="musicSheetA" id="musicSheet4A" style="width:1420px" height="1350px" src="https://drive.google.com/uc?export=view&id=1MiMuSVoV5TlGnM0_LDLF26HOsnPl5xpC">
+    <img id="orchestraLayout4B" style="width:1420px" height="1350px" src="https://drive.google.com/uc?export=view&id=1JW3hFmy5foT7eVsXVdCSYY_1G5UFwlSO">
 </div>
 </main>
 
