--- a/draw/templates/draw/big.html
+++ b/draw/templates/draw/big.html
@@ -154,17 +154,19 @@
     <div>
         <img id="orchestraLayout1B" style="width:1420px" height="1000px" src="https://drive.google.com/uc?export=view&id=17Wzq-wM1YYbarf1HAn0kS6ORLvcb-cUh">
         <div class="row">
-            <div class="col"> video<span class="border border-primary"></span>
+            <div class="col"> <span class="border align-self-center border-dark"> video </span>
             </div>
-            <div class="col"> video<span class="border border-primary"></span>
+            <div class="col"> <span class="border border-dark"> video </span>
             </div>
-            <div class="col"> video<span class="border border-primary"></span>
+            <div class="col"> <span class="border border-dark"> video </span>
             </div>
-            <div class="col"> video<span class="border border-primary"></span>
+            <div class="col"> <span class="border border-dark"> video </span>
             </div>
-            <div class="col"> video<span class="border border-primary"></span>
+            <div class="col"> <span class="border border-dark"> video </span>
             </div>
-            <div class="col"> video<span class="border border-primary"></span>
+            <div class="col"> <span class="border border-dark"> video </span>
+            </div>
+            <div class="col"> <span class="border border-dark"> video </span>
             </div>
         </div>
         
